--- a/front/edit.html
+++ b/front/edit.html
@@ -85,7 +85,7 @@
         const urlParams = getUrlParams()
         const url = '/api/blog/detail?id=' + urlParams.id
         get(url).then(res => {
-            if (res.error !== 0) {
+            if (res.errno !== 0) {
                 alert('操作错误')
                 return
             }
@@ -110,7 +110,7 @@
                 content
             }
             post(url, data).then(res => {
-                if (res.error !== 0) {
+                if (res.errno !== 0) {
                     alert('操作错误')
                     return
                 }
