--- a/front/login.html
+++ b/front/login.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>登录</title>
+    <title>Login</title>
 </head>
 
 <body>
     <div>
         <label>
-            用户名 <input type="text" id="textUsername" />
+            Username <input type="text" id="textUsername" />
         </label>
         <label>
-            密码 <input type="password" id="textPassword" />
+            Password <input type="password" id="textPassword" />
         </label>
-        <button id="btnLogin">登录</button>
+        <button id="btnLogin">Login!</button>
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script>
-        // 发送 post 请求
+        // Send POST request
         function post(url, data = {}) {
 
             return $.ajax({
@@ -44,10 +44,10 @@
             post(url, data).then(res => {
                 console.log("res", res)
                 if (res.errno === 0) {
-                    // 登录成功
+                    // login success
                     location.href = '/admin.html'
                 } else {
-                    // 登录失败
+                    // login failed
                     alert(res.message)
                 }
             })
