--- a/front/edit.html
+++ b/front/edit.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>编辑博客</title>
+    <title>Blogs Editor</title>
     <style type="text/css">
         body {
             margin: 0 20px;
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <h1 style="border-bottom: 1px solid #ccc; padding-bottom: 10px;">编辑博客</h1>
+    <h1 style="border-bottom: 1px solid #ccc; padding-bottom: 10px;">Edit Your Blog</h1>
     <div>
         <div class="title-wrapper">
             <input id="text-title">
@@ -41,18 +41,18 @@
             <textarea id="text-content"></textarea>
         </div>
         <div>
-            <button id="btn-update">保存</button>
+            <button id="btn-update">Save</button>
         </div>
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script>
-        // 发送 get 请求
+        // Send GET request
         function get(url) {
             return $.get(url)
         }
 
-        // 发送 post 请求
+        // Send POST request
         function post(url, data = {}) {
             return $.ajax({
                 type: 'post',
@@ -62,7 +62,7 @@
             })
         }
 
-        // 获取 url 参数
+        // Get url parameters
         function getUrlParams() {
             let paramStr = location.href.split('?')[1] || ''
             paramStr = paramStr.split('#')[0]
@@ -76,28 +76,28 @@
             return result
         }
 
-        // 获取 dom 元素
+        // Get dom elements
         const $textTitle = $('#text-title')
         const $textContent = $('#text-content')
         const $btnUpdate = $('#btn-update')
 
-        // 获取博客内容
+        // Get blog contents
         const urlParams = getUrlParams()
         const url = '/api/blog/detail?id=' + urlParams.id
         get(url).then(res => {
             if (res.errno !== 0) {
-                alert('操作错误')
+                alert('Operation Errors')
                 return
             }
 
-            // 显示数据
+            // Show data
             const data = res.data || {}
             $textTitle.val(data.title)
             $textContent.val(data.content)
             $btnUpdate.attr('data-id', data.id)
         })
 
-        // 提交修改内容
+        // Submit edited content
         $btnUpdate.click(function () {
             const $this = $(this)
             const id = $this.attr('data-id')
@@ -111,10 +111,10 @@
             }
             post(url, data).then(res => {
                 if (res.errno !== 0) {
-                    alert('操作错误')
+                    alert('Operation Error!')
                     return
                 }
-                alert('更新成功')
+                alert('Update Successfully!')
                 location.href = '/admin.html'
             })
         })
