ChangePort: Front to 8082, api to 8083

--- a/front/index.html
+++ b/front/index.html
@@ -49,7 +49,7 @@
 
         // Show formatted times 
         function getFormatDate(dt) {
-            return moment(dt).format('LL')
+            return moment(dt).format()
         }
 
         // Get url parameters
