--- a/front/detail.html
+++ b/front/detail.html
@@ -52,7 +52,7 @@
 
         // Show formatted times
         function getFormatDate(dt) {
-            return moment(dt).format('LL')
+            return moment(dt).format()
         }
 
         // Get url parameters
