fix bugs in front-end html files

--- a/front/index.html
+++ b/front/index.html
@@ -36,6 +36,14 @@
 
 <body>
     <h1>Blog Main Page</h1>
+    <script>
+        document.write("<p> Welcome! It's ")
+        document.write(Date())
+        document.write(" now.</p>")
+    </script>
+    
+    <a href="/login.html">Log in</a>&nbsp &nbsp
+    <a href="/admin.html">User Center</a>
     <div id="blog-container"></div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
