--- a/front/admin.html
+++ b/front/admin.html
@@ -107,10 +107,10 @@
                             <a href="/detail.html?id=${item.id}" target="_blank">${item.title}</a>
                         </td>
                         <td>
-                            <a href="/edit.html?id=${item.id}">编辑</a>
+                            <a href="/edit.html?id=${item.id}">Edit</a>
                         </td>
                         <td>
-                            <a data-id="${item.id}" class="item-del">删除</a>
+                            <a data-id="${item.id}" class="item-del">Delete</a>
                         </td>
                     </tr>
                 `))
